# world-solving

./: README.md  executive_summary.md  pyproject.toml  report.md
src/world_solving/: crew.py  main.py
src/world_solving/config/: agents.yaml  tasks.yaml
